fix blog trailing slash redirect issue

--- a/blog/src/components/MyHeader.astro
+++ b/blog/src/components/MyHeader.astro
@@ -39,7 +39,7 @@ const { siteTitle } = Astro.props;
   <a href="/" class="text-gray-900 hover:text-yellow-500 dark:text-white">Docs</a>
 </div>
 <div>
-  <a href="/blog" class="text-gray-900 hover:text-yellow-500 dark:text-white">{blogConfig.title}</a>
+  <a href="/blog/" class="text-gray-900 hover:text-yellow-500 dark:text-white">{blogConfig.title}</a>
 </div>
 
 <style>
