--- a/opensaas-sh/blog/src/components/MyHeader.astro
+++ b/opensaas-sh/blog/src/components/MyHeader.astro
@@ -4,10 +4,9 @@ import config from 'virtual:starlight/user-config';
 import blogConfig from 'virtual:starlight-blog-config'
 import type { Props } from '@astrojs/starlight/props';
 
-const href = Astro.site;
 const { siteTitle } = Astro.props;
 ---
-<a {href} class="site-title sl-flex">
+<a href='https://opensaas.sh' class="site-title sl-flex">
 	{
 		config.logo && logos.dark && (
 			<>
@@ -17,6 +16,7 @@ const { siteTitle } = Astro.props;
 					src={logos.dark.src}
 					width={logos.dark.width}
 					height={logos.dark.height}
+          loading="eager"
 				/>
 				{/* Show light alternate if a user configure both light and dark logos. */}
 				{!('src' in config.logo) && (
@@ -26,6 +26,7 @@ const { siteTitle } = Astro.props;
 						src={logos.light?.src}
 						width={logos.light?.width}
 						height={logos.light?.height}
+            loading="eager"
 					/>
 				)}
 			</>
