add tweet and changes

--- a/opensaas-sh/blog/src/components/Tweet.astro
+++ b/opensaas-sh/blog/src/components/Tweet.astro
@@ -9,7 +9,7 @@ const { id } = Astro.props;
 <style>
     .tweet-wrapper {
         transform: scale(0.85);
-        margin-bottom: 0rem;
+        margin: -3rem 0;
     }
     /* Target the Twitter iframe to reduce padding */
     :global(.twitter-tweet-rendered) {
