--- a/template/app/src/client/Main.css
+++ b/template/app/src/client/Main.css
@@ -172,6 +172,8 @@ span.flatpickr-weekday,
     --foreground: 0 0% 3.9%;
     --card: 0 0% 100%;
     --card-foreground: 0 0% 3.9%;
+    --card-accent: 31 57% 93%;
+    --card-accent-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
     --primary: 0 0% 9%;
